fixed z-index of modal for portfolio images

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,7 +38,7 @@ section { background-attachment: fixed;}
 		position: fixed;
 		top: 0;
 		left: 0;
-		z-index: 9999;
+		z-index: 99;
 	}
 	nav {
 		@include transition(all, 0.3s);
@@ -231,7 +231,7 @@ section { background-attachment: fixed;}
 	.modal {
 		display: none;
 		position: fixed;
-		z-index: 1;
+		z-index: 100;
 		padding-top: 200px;
 		left: 0;
 		top: 0;
